force-app/main/default/objects/Brand_Product__c/Brand_Product__c.object-meta.xml
<CustomObject>
    <label>Brand Product</label>
    <nameField>
        <label>Brand Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>