force-app/main/default/objects/Brand_Product__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>40000</length>
    <type>Html</type>
</CustomField>