force-app/main/default/objects/Brand_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Colour__c</columns>
    <columns>Description__c</columns>
    <columns>Price__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Brand__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>